cui/source/options/optgdlg.hxx
@@ -111,7 +111,6 @@ private:
     std::unique_ptr<weld::CheckButton> m_xUseHardwareAccell;
     std::unique_ptr<weld::CheckButton> m_xUseAntiAliase;
     std::unique_ptr<weld::CheckButton> m_xUseSkia;
-    std::unique_ptr<weld::CheckButton> m_xForceSkia;
     std::unique_ptr<weld::CheckButton> m_xForceSkiaRaster;
 
     std::unique_ptr<weld::Label> m_xSkiaStatusEnabled;
@@ -122,7 +121,6 @@ private:
     std::unique_ptr<weld::Button> m_xMoreIcons;
 
     DECL_LINK(OnAntialiasingToggled, weld::ToggleButton&, void);
-    DECL_LINK(OnForceSkiaToggled, weld::ToggleButton&, void);
     DECL_LINK(OnForceSkiaRasterToggled, weld::ToggleButton&, void);
     DECL_STATIC_LINK(OfaViewTabPage, OnMoreIconsClick, weld::Button&, void);
     void UpdateSkiaStatus();
